# cmake_project_template

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.disyml  ubuntu.yml  windows.yml
ci_scripts/: versionize.sh
cmake/: cpack_config.cmake  fetch_dependencies.cmake  qtifw_component.qs  qtifw_control.qs  windeployqt.cmake
example_modules/: CMakeLists.txt  adder.ixx  example_modules.cpp
example_modules/test/: CMakeLists.txt  test_example_modules.cpp
